# dexi

./: .gitignore  .gitmodules  README.md  dexi.repos
custom_mode/: CMakeLists.txt  CustomMode.cpp  CustomMode.hpp  package.xml
custom_mode/launch/: custom_mode.launch.py
dexi/: CMakeLists.txt  package.xml
dexi/camera_info/: arducam_imx519_16mp.txt  arducam_imx519_16mp_320_240.txt  arducam_imx519_16mp_320_240.yaml  arducam_imx519_16mp_640_480.yaml  main_camera_2.1.yaml
dexi/launch/: camera.launch.xml  camera_composable.launch.py  camera_with_calibration_file.xml  dexi.launch.xml
dexi/scripts/: dexi.service  dexi_avr.service  install.bash  start.bash  start_avr.bash
dexi_led_strip/: package.xml  setup.cfg  setup.py
dexi_led_strip/dexi_led_strip/: channel_wrap_animation.py  led_strip_node.py  neopixel_ring_spi.py  util.py
dexi_msgs/: CMakeLists.txt
dexi_msgs/srv/: SetLedEffect.srv
dexi_py/: README.md  package.xml  setup.py
dexi_py/dexi_py/: circular_trajectory.py  current_yaw.py  gpio_writer_service.py  led_animation_service.py  led_flight_mode_status.py  led_service.py  offboard.py  px4_offboard_manager.py  servo_controller.py  thermal_camera.py  thermal_camera_mock.py  yaw_in_place.py
dexi_py/examples/: april_tag_subscriber.py  led_fade.py  led_pixel_service_call.py  led_ring_service_call.py  offboard_box_mission.py  offboard_fly_forward.py  offboard_heartbeat.py  (+1 more)
docs/: apriltag.md  camera-calibration.md  gpio.md  led.md  offboard.md  px4-nsh.md  rosapi.md  sitl.md
droneblocks/: package.xml  setup.py
led_msgs/: CMakeLists.txt
(+30 files in other folders)
